commit tree 9dc1657c41abd6e67513fc48f7f6766a98a55ff8

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!-- Write your HTML in this file -->
+<!doctype html>
+<html lang="en">
+    <head>
+        <h1>"hello, world!</h1>
+        <body>
+            <a href="https://flatironschool.com">Flatiron School</a>
+        </body>
+    </head>
+</html>
